# ASS

./: .gitignore  LICENSE  README.md  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: deploy-main.yml  test-develop.yml
.husky/: commit-msg
apps/backend/: .dockerignore  Dockerfile  project.json  pyproject.toml
apps/backend/app/application/api/: lifespan.py  main.py  schemas.py
apps/backend/app/application/api/simulations/: handlers.py  schemas.py
apps/backend/app/application/exceptions/: __init__.py
apps/backend/app/domain/entities/: base.py
apps/backend/app/domain/events/: simulations.py
apps/backend/app/domain/exceptions/: base.py  simulations.py
apps/backend/app/domain/values/: base.py  simulations.py
apps/backend/app/infrastructure/repositories/: base.py
apps/backend/app/logic/: init.py
apps/backend/app/logic/commands/: __init__.py  base.py  simulations.py
apps/backend/app/logic/events/: base.py
apps/backend/app/logic/exceptions/: base.py
apps/backend/app/logic/mediator/: base.py  command.py  event.py  query.py
apps/backend/app/settings/: config.py
apps/backend/app/tests/: __init__.py  conftest.py
apps/backend/app/tests/logic/: test_simulations.py
apps/frontend/: .cta.json  Dockerfile  package.json  project.json  vite.config.ts
backend/: .pre-commit-config.yaml  Dockerfile  pyproject.toml
backend/app/application/api/: main.py
backend/app/application/exceptions/: base.py
backend/app/domain/entities/: base.py  simulations.py
backend/app/domain/events/: base.py
backend/app/domain/values/: base.py  simulations.py
backend/app/infrastructure/database/models/: simulations.py
backend/app/infrastructure/repositories/simulations/: base.py  converters.py  memory.py  postgresql.py
backend/app/logic/: init.py
backend/app/logic/commands/: base.py  simulations.py
backend/app/logic/exceptions/: base.py  mediator.py
backend/app/logic/mediator/: base.py
backend/app/tests/: __init__.py  conftest.py  fixtures.py
backend/app/tests/domain/values/: test_simulations.py
backend/app/tests/logic/: test_simulations.py
docker/: Makefile  docker-compose.dev.yaml  docker-compose.prod.yaml
docs/diagrams/src/: class.plantuml  flowchart.plantuml  sequnce.plantuml
(+5 files in other folders)
