[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [{ name = "Aleksandr Zagrivnyy", email = "zagrivnyj.af@edu.spbstu.ru" }]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "fastapi (>=0.120.0,<0.121.0)",
    "ipython (>=9.6.0,<10.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
lint = [
    "ruff>=0.14.2,<0.15",
    "pre-commit>=4.3.0,<5",
]
dev = [
    "pytest>=8.4.2,<9",
    "pytest-asyncio>=1.2.0,<2",
    "faker>=37.12.0,<38",
    "commitizen>=4.9.1",
]

[tool.uv]
package = false
default-groups = [
    "lint",
    "dev",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py313"
src = ["app"]

[tool.ruff.lint]
preview = true
select = [
    "ALL"
]
ignore = [
    "D100",
    "D101",
    "D102",
    "D105",
]
fixable = [
    "I",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = [
    "application",
    "domain",
    "infrastructure",
    "logic",
    "settings",
    "tests"
]
extra-standard-library = []
known-third-party = ["fastapi", "starlette"]
combine-as-imports = true
force-single-line = false
lines-after-imports = 2
lines-between-types = 0
split-on-trailing-comma = true
force-sort-within-sections = true
force-wrap-aliases = false
order-by-type = true
case-sensitive = false
no-lines-before = []
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
    "testing"
]
relative-imports-order = "closest-to-furthest"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
